kubernetes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ce-grp-2-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "ce-grp-2-capstone.sctp-sandbox.com" # Route53 Record
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #       - "ce-grp-2-capstone.sctp-sandbox.com" # Route53 Record
  #     secretName: ce-grp-2-capstone-tls
  rules:
    - host: "ce-grp-2-capstone.sctp-sandbox.com" # Route53 Record
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
